# profile.mobile.apps.native.wallpaper-ui-service

./: .cproject  .project  CMakeLists.txt  org.tizen.wallpaper-ui-service-1.0.0-arm.tpk  org.tizen.wallpaper-ui-service-1.0.0-arm_debug.tpk  org.tizen.wallpaper-ui-service-1.0.0-i386.tpk  org.tizen.wallpaper-ui-service-1.0.0-i386_debug.tpk  org.tizen.wallpaper-ui-service.efl  org.tizen.wallpaper-ui-service.manifest  org.tizen.wallpaper-ui-service.xml  project.config  project_def.prop  tizen-manifest.xml
inc/: wallpaper-ui-service-debug.h  wallpaper-ui-service-main.h  wallpaper-ui-service.h
include/: wallpaper-ui-service-debug.h  wallpaper-ui-service-main.h  wallpaper-ui-service.h
packaging/: org.tizen.wallpaper-ui-service.spec
po/: CMakeLists.txt  as.po  bn.po  en.po  en_PH.po  en_US.po  es_US.po  gu.po  hi.po  id.po  km.po  kn.po  ko_KR.po  lo.po  ml.po  mr.po  ms.po  my.po  ne.po  or.po  pa.po  pt_BR.po  si.po  ta.po  te.po  th.po  tl.po  ur.po  vi.po  zh_CN.po
po_sdk/: ar.po  az.po  bg.po  de.po  el_GR.po  en.po  en_US.po  fi.po  hu.po  is.po  kk.po  ko_KR.po  lt.po  lv.po  nb.po  pl.po  pt_BR.po  pt_PT.po  sr.po  tr_TR.po  zh_CN.po  zh_HK.po  zh_TW.po
res/: CMakeLists.txt
res/edje/: button_customized_theme.edc  gengrid_customized_theme.edc  mutiple-wallpaper.edc  popup-wallpaper-macro.edc  popup-wallpaper-main-view.edc  popup-wallpaper.edc
res/po_sdk/: CMakeLists.txt  ca.po  cs.po  da.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hy.po  it_IT.po  ja_JP.po  ka.po  mk.po  nl.po  ro.po  ru_RU.po  sk.po  sl.po  sv.po  uk.po  uz.po
res/resources/edje/: button_customized_theme.edc  color_classes.edc  gengrid_customized_theme.edc  mutiple-wallpaper.edc  popup-wallpaper-macro.edc  popup-wallpaper-main-view.edc  popup-wallpaper.edc
src/: wallpaper-ui-service-main.c  wallpaper-ui-service.c
